--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,12 @@ body {
   width: 100%;
   height: 50px;
 }
+
+.rodapie { 
+  grid-area: rodapie;  
+  color:blue;
+}
+
+#mensajes-errores{
+  color: red;
+}
