diseño de pagina css y html

--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@
 }
 
 body {
-  background-color: lightgray;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background-color: lightcyan;
+  font-family: cursive;
 }
 
 .main {
@@ -17,17 +17,18 @@ body {
 }
 
 .titulo {
-  padding: 15px;
-  width: 30vw;
-  margin: auto;
-
+  font-size: 18p;
+  font-family: fantasy;
+  padding: 10px;
+  width: 80vw;
+  margin: 12px 300px 5px;
 }
 
 .box {
   padding: 10px;
   margin: 0 10px 0 10px;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-  background-color: white;
+  background-color: mediumslateblue;
   border-radius: 0.5em;
   width: 30vw;
   height: auto;
@@ -54,7 +55,13 @@ body {
 
 .rodapie { 
   grid-area: rodapie;  
-  color:blue;
+  color:brown;
+  padding: 10px;
+  margin-top: 50px;
+  border-radius: 0.5em;
+  font-family: cursive;
+  font-size: medium;
+  font-weight: bold;
 }
 
 #mensajes-errores{
